# bug-free-octo-fishstick

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md  development.md  odis_webservice.md  safety.md  usage.md
src/adapters/: odis_soap.py  protocols.py  virtual_ecu.py
src/application/: operations.py  pipeline.py  reporting.py
src/cli/: main.py
src/core/: dids.py  hexcodec.py  nrc.py  requests.py  responses.py
tests/: test_cli.py  test_hexcodec.py  test_pipeline.py  test_requests.py  test_responses.py  test_virtual_ecu.py
