[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diagbridge"
version = "0.1.0"
description = "Controlled Python diagnostic bridge for ODIS WebService and UDS ECU workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zeep>=4.2.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
diagbridge = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
